--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
     <div class="carousel-inner">
 
       <div class="carousel-item active">
-        <img src="assets/images/hero.png" class="d-block w-100" alt="School Kids">
+        <img src="assets/images/heroa.jpg" class="d-block w-100" alt="School Kids">
       </div>
 
       <div class="carousel-item">
-        <img src="assets/images/hero1.jpg" class="d-block w-100" alt="Students Classroom">
+        <img src="assets/images/heroa1.jpg" class="d-block w-100" alt="Students Classroom">
       </div>
 
       <div class="carousel-item">
