--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Child Today</title>
@@ -12,8 +13,15 @@
 <style>
   .hero-section {
   position: relative;
-  height: 100vh;
+  min-height: 90vh;
   overflow: hidden;
+}
+
+
+/* ADD HERE */
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 /* Carousel stays behind */
@@ -28,6 +36,7 @@
 .hero-section .carousel-inner img {
   height: 100%;
   width: 100%;
+  max-width: none;
   object-fit: cover;
   object-position: top center;
 }
@@ -52,6 +61,89 @@
   color: white;
   width: 90%;
   max-width: 700px;
+  padding: 15px;
+}
+
+/* ============================= */
+/* MOBILE OPTIMIZATION PACK */
+/* Only affects screens ≤ 768px */
+/* ============================= */
+
+@media (max-width: 768px) {
+
+  /* HERO SECTION */
+  .hero-section {
+    min-height: 65vh;
+    height: auto;
+  }
+
+  .hero-text {
+    width: 95%;
+    padding: 10px;
+  }
+
+  .hero-title {
+    font-size: 1.6rem;
+    line-height: 1.3;
+  }
+
+  .hero-description {
+    font-size: 0.95rem;
+  }
+
+  /* HERO BUTTONS STACK */
+  .hero-text .btn {
+    display: block;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+
+  /* CAROUSEL IMAGE BETTER CROPPING */
+  .hero-section .carousel-inner img {
+    object-position: center;
+  }
+
+  /* NAVBAR MOBILE BUTTONS */
+  .navbar .btn {
+    width: 100%;
+    margin-top: 10px;
+  }
+
+  /* SECTION SPACING */
+  section {
+    padding-top: 40px !important;
+    padding-bottom: 40px !important;
+  }
+
+  /* FEATURES CARDS */
+  .card {
+    margin-bottom: 15px;
+  }
+
+  /* PRICING CARDS TEXT */
+  .card-price {
+    font-size: 1.5rem;
+  }
+
+  /* CONTACT FORM SPACING */
+  .form-control {
+    font-size: 16px; /* Prevents iPhone zoom */
+  }
+
+}
+
+
+/* EXTRA SMALL PHONES */
+@media (max-width: 480px) {
+
+  .hero-title {
+    font-size: 1.4rem;
+  }
+
+  .hero-description {
+    font-size: 0.9rem;
+  }
+
 }
 
 
@@ -72,8 +164,8 @@
           <li class="nav-item"><a class="nav-link" href="#features">Features</a></li>
           <li class="nav-item"><a class="nav-link" href="#pricing">Pricing</a></li>
         </ul>
-        <a href="login.html" class="btn btn-outline-success">Login</a>
-        <a href="signup.html" class="btn btn-success ms-3">Sign Up</a>
+        <a href="login.html" class="btn btn-outline-success w-100 mt-2">Login</a>
+        <a href="signup.html" class="btn btn-success w-100 mt-2">Sign Up</a>
       </div>
     </div>
   </nav>
@@ -465,11 +557,11 @@
 <button id="test">Test Backend</button>
 
 <script>
-$("#test").click(function(){
-  $.get("http://localhost:5000", function(data){
-    alert(data);
-  });
-});
+document.getElementById("test").onclick = function () {
+  fetch("http://localhost:5000")
+    .then(res => res.text())
+    .then(data => alert(data));
+};
 </script>
 
     
