--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@ img {
   padding: 15px;
 }
 
+/* Navbar smooth transition */
+.navbar {
+  transition: all 0.3s ease;
+}
+
+/* When scrolled */
+.navbar.scrolled {
+  padding-top: 8px !important;
+  padding-bottom: 8px !important;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+}
+
 /* ============================= */
 /* MOBILE OPTIMIZATION PACK */
 /* Only affects screens ≤ 768px */
@@ -580,7 +592,17 @@ document.getElementById("test").onclick = function () {
 };
 </script>
 
-    
+<script>
+window.addEventListener("scroll", function () {
+  const navbar = document.querySelector(".navbar");
+  if (window.scrollY > 50) {
+    navbar.classList.add("scrolled");
+  } else {
+    navbar.classList.remove("scrolled");
+  }
+});
+</script>
+
 
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
