--- a/index.html
+++ b/index.html
@@ -56,13 +56,20 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
   z-index: 3;
   text-align: center;
   color: white;
   width: 90%;
   max-width: 700px;
   padding: 15px;
+  opacity: 1;
+  transition: all 0.6s ease;
+}
+
+.hero-text.fade-out {
+  opacity: 0;
+  transform: translate(-50%, -40%) scale(0.95);
 }
 
 /* Navbar smooth transition */
@@ -76,6 +83,21 @@ img {
   padding-bottom: 8px !important;
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
 }
+
+.btn {
+  transition: all 0.25s ease;
+}
+
+.btn:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 6px 16px rgba(0,0,0,0.15);
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+
 
 /* ============================= */
 /* MOBILE OPTIMIZATION PACK */
@@ -605,5 +627,26 @@ window.addEventListener("scroll", function () {
 
 
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+
+<!-- Hero text animation script -->
+<script>
+document.addEventListener("DOMContentLoaded", function () {
+  const heroCarouselEl = document.querySelector('#heroCarousel');
+  const heroText = document.querySelector('.hero-text');
+
+  if (!heroCarouselEl || !heroText) return;
+
+  heroCarouselEl.addEventListener('slide.bs.carousel', () => {
+    heroText.classList.add('fade-out');
+  });
+
+  heroCarouselEl.addEventListener('slid.bs.carousel', () => {
+    heroText.classList.remove('fade-out');
+  });
+});
+</script>
+
+
 </body>
 </html>
