--- a/index.html
+++ b/index.html
@@ -67,8 +67,19 @@ img {
   transition: all 0.6s ease;
 }
 
+/* Hero Entrance Animation + Carousel Transition */
 .hero-text-content {
+  opacity: 0;
+  transform: translateY(20px);
+  animation: heroFadeIn 0.9s ease forwards;
   transition: all 0.6s ease;
+}
+
+@keyframes heroFadeIn {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .hero-text-content.fade-out {
@@ -97,6 +108,26 @@ img {
   transform: translateY(-2px);
   box-shadow: 0 6px 16px rgba(0,0,0,0.15);
 }
+
+/* Premium Glow Hover Effect */
+.btn-success {
+  position: relative;
+  overflow: hidden;
+}
+
+.btn-success::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: radial-gradient(circle at center, rgba(255,255,255,0.35), transparent 60%);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.btn-success:hover::after {
+  opacity: 1;
+}
+
 
 html {
   scroll-behavior: smooth;
@@ -132,10 +163,10 @@ html {
   }
 
   /* HERO BUTTONS STACK */
-  .hero-text .btn {
-  display: inline-block;
-  width: 180px;
-  margin: 8px 6px;
+ .hero-text .btn {
+  display: block;
+  width: 220px;
+  margin: 10px auto;
   padding: 10px 0;
   font-size: 0.95rem;
   text-align: center;
