--- a/index.html
+++ b/index.html
@@ -67,6 +67,23 @@ img {
   transition: all 0.6s ease;
 }
 
+.hero-title {
+  font-weight: 700;
+  letter-spacing: -0.3px;
+  margin-bottom: 14px;
+  text-shadow: 0 3px 12px rgba(0,0,0,0.45);
+}
+
+.hero-description {
+  font-size: 1.05rem;
+  line-height: 1.6;
+  color: rgba(255,255,255,0.95);
+  max-width: 520px;
+  margin: 0 auto 22px auto;
+  text-shadow: 0 2px 10px rgba(0,0,0,0.35);
+}
+
+
 /* Hero Entrance Animation + Carousel Transition */
 .hero-text-content {
   opacity: 1;
@@ -83,6 +100,19 @@ img {
   opacity: 0;
   transform: translateY(-10px);
 }
+
+.hero-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 14px;
+  flex-wrap: wrap;
+  margin-top: 10px;
+}
+
+.hero-buttons .btn {
+  min-width: 190px;
+}
+
 
 
 /* Navbar smooth transition */
@@ -160,13 +190,15 @@ html {
   }
 
   /* HERO BUTTONS STACK */
- .hero-text .btn {
-  display: block;
-  width: 220px;
-  margin: 10px auto;
-  padding: 10px 0;
-  font-size: 0.95rem;
-  text-align: center;
+@media (max-width: 768px) {
+  .hero-buttons {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .hero-buttons .btn {
+    width: 220px;
+  }
 }
 
   /* CAROUSEL IMAGE BETTER CROPPING */
@@ -247,8 +279,16 @@ html {
           <li class="nav-item"><a class="nav-link" href="#features">Features</a></li>
           <li class="nav-item"><a class="nav-link" href="#pricing">Pricing</a></li>
         </ul>
-        <a href="login.html" class="btn btn-outline-success ms-lg-2 mt-2 mt-lg-0">Login</a>
-        <a href="signup.html" class="btn btn-success ms-lg-2 mt-2 mt-lg-0">Sign Up</a>
+        <div class="hero-buttons">
+        <a href="signup.html" class="btn btn-success btn-lg">
+          Get Started Free
+        </a>
+
+        <a href="#pricing" class="btn btn-outline-light btn-lg">
+          See Plans
+        </a>
+      </div>
+
       </div>
     </div>
   </nav>
