--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ html {
       Track attendance and send SMS notifications to parents effortlessly. Keep parents informed in real time.
     </p>
   </div>
-    <a href="signup.html" class="btn btn-success btn-lg me-3">
+    <a href="signup.html" class="btn btn-success btn-lg">
       Get Started Free
     </a>
 
