--- a/index.html
+++ b/index.html
@@ -337,13 +337,16 @@ html {
       Track attendance and send SMS notifications to parents effortlessly. Keep parents informed in real time.
     </p>
   </div>
-    <a href="signup.html" class="btn btn-success btn-lg">
-      Get Started Free
-    </a>
+     <div class="hero-buttons">
+        <a href="signup.html" class="btn btn-success btn-lg">
+          Get Started Free
+        </a>
 
-    <a href="#pricing" class="btn btn-outline-light btn-lg">
-      See Plans
-    </a>
+        <a href="#pricing" class="btn btn-outline-light btn-lg">
+          See Plans
+        </a>
+      </div>
+
   </div>
 
 </section>
