--- a/schooladmin/dashboard.html
+++ b/schooladmin/dashboard.html
@@ -17,20 +17,62 @@
 
   <style>
     /* Styles — kept largely from your original with minimal changes */
-    body, .sidebar, .content, .card, .table, button, a, h1, h2, h3, h4, h5, h6, p, span, td, th {
-      font-size: 11px !important;
-      line-height: 1.2 !important;
-      font-family: 'Roboto', sans-serif;
-      color: #333;
-    }
-    h1, h2, h3 { font-size: 13px !important; font-weight: 600 !important; }
+          body, .sidebar, .content, .card, .table, button, a, p, span, td, th {
+        font-family: 'Roboto', sans-serif;
+        color: #333;
+        font-size: 14px;
+        line-height: 1.4;
+      }
 
-    .sidebar {
+      h1, h2, h3 {
+        font-weight: 600 !important;
+        font-size: 18px;
+      }
+
+      /* ===== MOBILE OPTIMIZATION ===== */
+        @media (max-width: 768px) {
+
+          body {
+            font-size: 15px;
+          }
+
+          .content {
+            margin-left: 0;
+            padding: 1rem;
+          }
+
+          .sidebar {
+            transform: translateX(-100%);
+            transition: transform 0.3s ease;
+          }
+
+          .sidebar.show {
+            transform: translateX(0);
+          }
+
+        }
+
+        @media (max-width: 768px) {
+
+            .card {
+              border-radius: 12px;
+            }
+
+            .stat-card h3 {
+              font-size: 20px !important;
+            }
+
+          }
+
+
+      .sidebar {
       width: 190px !important;
-      height: 100vh;
+      min-height: 100vh;   /* change from height to min-height */
+      height: auto;        /* allow grow */
       position: fixed;
       top: 0;
       left: 0;
+      bottom: 0;           /* ⭐ THIS is key */
       overflow-y: auto;
       background-color: #2f3e46;
       color: #fff !important;
@@ -40,6 +82,7 @@
       flex-direction: column;
       justify-content: space-between;
     }
+
     .sidebar .sidebar-header { display:flex; align-items:center; gap:6px; margin-bottom:.8rem; padding:0 10px; }
     .sidebar .sidebar-header span { font-size:11px !important; font-weight:600; color:#fff !important; }
     .sidebar .nav-link { display:flex; align-items:center; font-size:10.5px !important; padding:6px 10px !important; border-radius:6px; color:#e0e0e0 !important; transition: background .25s ease, color .25s ease; }
