--- a/schooladmin/dashboard.html
+++ b/schooladmin/dashboard.html
@@ -29,28 +29,39 @@
         font-size: 18px;
       }
 
-      /* ===== MOBILE OPTIMIZATION ===== */
-        @media (max-width: 768px) {
+      /* ===== MOBILE DASHBOARD FIX ===== */
+          @media (max-width: 768px) {
 
-          body {
-            font-size: 15px;
+            body {
+              font-size: 15px;
+            }
+
+            /* Sidebar becomes top section */
+            .sidebar {
+              position: relative;
+              width: 100% !important;
+              min-height: auto;
+              height: auto;
+              flex-direction: column;
+            }
+
+            /* Content takes full width */
+            .content {
+              margin-left: 0 !important;
+              width: 100%;
+              padding: 1rem !important;
+            }
+
+            .card {
+              border-radius: 12px;
+            }
+
+            .stat-card h3 {
+              font-size: 20px !important;
+            }
+
           }
 
-          .content {
-            margin-left: 0;
-            padding: 1rem;
-          }
-
-          .sidebar {
-            transform: translateX(-100%);
-            transition: transform 0.3s ease;
-          }
-
-          .sidebar.show {
-            transform: translateX(0);
-          }
-
-        }
 
         @media (max-width: 768px) {
 
@@ -92,7 +103,12 @@
     .logout-btn { font-size:10px !important; padding:5px 8px !important; border-radius:5px !important; display:flex; align-items:center; justify-content:center; gap:4px; width:100%; background-color:#dc3545; color:#fff !important; border:none; transition:background .2s ease; }
     .logout-btn:hover { background-color:#c82333; }
 
-    .content { margin-left:190px; padding:1rem !important; font-size:11px !important; background-color:#f8f9fa; min-height:100vh; }
+    .content {
+       margin-left:190px; 
+       padding:1rem !important; 
+       font-size:11px !important; 
+       background-color:#f8f9fa; 
+       min-height:100vh; }
     .card { padding:.6rem !important; border-radius:8px !important; box-shadow:0 1px 4px rgba(0,0,0,.05); background-color:#fff; }
     .stat-card h6 { font-size:10px !important; }
     .stat-card h3 { font-size:15px !important; }
