--- a/schooladmin/dashboard.html
+++ b/schooladmin/dashboard.html
@@ -29,44 +29,51 @@
         font-size: 18px;
       }
 
-      /* ===== FINAL MOBILE DASHBOARD LAYOUT ===== */
-            @media (max-width: 768px) {
+      /* ===== MOBILE DASHBOARD FIX ===== */
+          @media (max-width: 768px) {
 
-              .d-flex {
-                flex-direction: column;
-              }
-
-              /* Sidebar becomes top block */
-              .sidebar {
-                position: relative;
-                width: 100% !important;
-                min-height: auto;
-                height: auto;
-                flex-direction: column;
-              }
-
-              /* Content full width */
-              .content {
-                margin-left: 0 !important;
-                width: 100%;
-                padding: 1rem !important;
-              }
-
-              /* Improve mobile readability */
-              body {
-                font-size: 15px;
-              }
-
-              .card {
-                border-radius: 12px;
-              }
-
-              .stat-card h3 {
-                font-size: 20px !important;
-              }
-
+            body {
+              font-size: 15px;
             }
 
+            /* Sidebar becomes top section */
+            .sidebar {
+              position: relative;
+              width: 100% !important;
+              min-height: auto;
+              height: auto;
+              flex-direction: column;
+            }
+
+            /* Content takes full width */
+            .content {
+              margin-left: 0 !important;
+              width: 100%;
+              padding: 1rem !important;
+            }
+
+            .card {
+              border-radius: 12px;
+            }
+
+            .stat-card h3 {
+              font-size: 20px !important;
+            }
+
+          }
+
+
+        @media (max-width: 768px) {
+
+            .card {
+              border-radius: 12px;
+            }
+
+            .stat-card h3 {
+              font-size: 20px !important;
+            }
+
+          }
 
           .d-flex {
               min-height: 100vh;
