--- a/schooladmin/dashboard.html
+++ b/schooladmin/dashboard.html
@@ -61,6 +61,11 @@
             }
 
           }
+
+          .d-flex {
+                min-height: 100vh;
+              }
+
           
 
       .sidebar {
