--- a/schooladmin/dashboard.html
+++ b/schooladmin/dashboard.html
@@ -17,6 +17,30 @@
 
   <style>
 
+    /* ===== Production Mobile Sidebar ===== */
+
+          .offcanvas {
+            width: 240px;
+          }
+
+          .offcanvas .nav-link {
+            padding: 10px 12px;
+            border-radius: 8px;
+            color: #333;
+            font-weight: 500;
+            transition: all 0.2s ease;
+          }
+
+          .offcanvas .nav-link:hover {
+            background: #f1f3f5;
+          }
+
+          .offcanvas .nav-link.active {
+            background: #009688;
+            color: white;
+          }
+
+
     @media (max-width: 768px) {
           .sidebar {
             display: none !important;
@@ -145,35 +169,69 @@
     .stat-card:hover { transform: scale(1.03); }
 
     @media (max-width:768px) { .chart-container { margin-top:1rem; } }
+
+    .offcanvas {
+        transition: transform 0.35s ease;
+      }
+
+
+    
   </style>
 </head>
 <body>
 
   <!-- Mobile Offcanvas Sidebar -->
-        <div class="offcanvas offcanvas-start d-md-none"
-            tabindex="-1"
-            id="mobileSidebar">
+      <div class="offcanvas offcanvas-start d-md-none"
+          tabindex="-1"
+          id="mobileSidebar">
 
-          <div class="offcanvas-header">
-            <h5 class="offcanvas-title">School Admin</h5>
-            <button type="button"
-                    class="btn-close"
-                    data-bs-dismiss="offcanvas"></button>
-          </div>
+        <div class="offcanvas-header border-bottom">
+          <h5 class="offcanvas-title fw-semibold">
+            <i class="bi bi-mortarboard-fill me-2"></i>
+            School Admin
+          </h5>
 
-          <div class="offcanvas-body p-0">
-
-            <!-- SAME MENU AS SIDEBAR -->
-            <ul class="nav flex-column px-3">
-              <li class="nav-item"><a href="#" class="nav-link active">Dashboard</a></li>
-              <li class="nav-item"><a href="students.html" class="nav-link">Students</a></li>
-              <li class="nav-item"><a href="attendance.html" class="nav-link">Attendance</a></li>
-              <li class="nav-item"><a href="sms.html" class="nav-link">SMS</a></li>
-              <li class="nav-item"><a href="reports.html" class="nav-link">Reports</a></li>
-            </ul>
-
-          </div>
+          <button type="button"
+                  class="btn-close"
+                  data-bs-dismiss="offcanvas"></button>
         </div>
+
+        <div class="offcanvas-body d-flex flex-column p-0">
+
+          <!-- Menu -->
+          <ul class="nav flex-column px-3 pt-3" id="mobileMenu">
+            <li class="nav-item">
+              <a href="dashboard.html" class="nav-link">Dashboard</a>
+            </li>
+
+            <li class="nav-item">
+              <a href="students.html" class="nav-link">Students</a>
+            </li>
+
+            <li class="nav-item">
+              <a href="attendance.html" class="nav-link">Attendance</a>
+            </li>
+
+            <li class="nav-item">
+              <a href="sms.html" class="nav-link">SMS</a>
+            </li>
+
+            <li class="nav-item">
+              <a href="reports.html" class="nav-link">Reports</a>
+            </li>
+          </ul>
+
+          <!-- Logout Bottom -->
+          <div class="mt-auto p-3 border-top">
+            <button class="btn btn-danger w-100 logout-btn">
+              <i class="bi bi-box-arrow-right me-2"></i>
+              Logout
+            </button>
+          </div>
+
+        </div>
+      </div>
+
 
   <div class="d-flex">
     <!-- Sidebar -->
@@ -580,6 +638,27 @@
   // Initialize Firebase
   const app = initializeApp(firebaseConfig);
   const analytics = getAnalytics(app);
+
+  // Auto close mobile sidebar when clicking menu link
+    document.querySelectorAll('#mobileMenu .nav-link').forEach(link => {
+      link.addEventListener('click', () => {
+        const sidebar = bootstrap.Offcanvas.getInstance(
+          document.getElementById('mobileSidebar')
+        );
+        if (sidebar) sidebar.hide();
+      });
+    });
+
+    // Highlight active mobile page automatically
+      const currentPage = window.location.pathname.split("/").pop();
+
+      document.querySelectorAll('#mobileMenu .nav-link').forEach(link => {
+        if (link.getAttribute('href') === currentPage) {
+          link.classList.add('active');
+        }
+      });
+
+
 </script>
 </body>
 </html>
