--- a/schooladmin/dashboard.html
+++ b/schooladmin/dashboard.html
@@ -97,6 +97,35 @@
 
           }
 
+          /* Collapsed sidebar */
+          .sidebar.collapsed {
+            width: 60px !important;
+          }
+          .sidebar.collapsed .nav-link span {
+            display: none;
+          }
+          .sidebar.collapsed .sidebar-header span {
+            display: none;
+          }
+          .content.collapsed {
+            margin-left: 60px !important;
+          }
+
+          /* Mobile toggle */
+          .sidebar.mobile-hidden {
+            transform: translateX(-100%);
+            transition: transform 0.3s ease;
+          }
+          .sidebar.mobile-visible {
+            transform: translateX(0);
+            transition: transform 0.3s ease;
+          }
+
+
+          .sidebar, .content {
+              transition: all 0.3s ease;
+            }
+
           
 
       .sidebar {
@@ -232,8 +261,17 @@
         </div>
       </div>
 
+      <!-- Hamburger for mobile -->
+        <button class="btn btn-primary d-md-none" id="sidebarToggle" 
+                style="position:fixed; top:10px; left:10px; z-index:300;">
+          <i class="bi bi-list fs-3"></i>
+        </button>
 
-  <div class="d-flex">
+        <button class="btn btn-sm btn-light d-none d-md-inline-flex mb-3" id="desktopCollapse">
+          <i class="bi bi-chevron-left"></i>
+        </button>
+
+  
     <!-- Sidebar -->
     <nav class="sidebar">
       <div class="sidebar-header d-flex align-items-center mb-4">
@@ -659,6 +697,71 @@
       });
 
 
+      // --- Desktop collapse ---
+const desktopCollapseBtn = document.getElementById('desktopCollapse');
+const sidebar = document.querySelector('.sidebar');
+const content = document.querySelector('.content');
+
+// Load previous collapsed state
+if (localStorage.getItem('sidebarCollapsed') === 'true') {
+  sidebar.classList.add('collapsed');
+  content.classList.add('collapsed');
+}
+
+// Toggle collapse on desktop
+desktopCollapseBtn?.addEventListener('click', () => {
+  sidebar.classList.toggle('collapsed');
+  content.classList.toggle('collapsed');
+  localStorage.setItem('sidebarCollapsed', sidebar.classList.contains('collapsed'));
+});
+
+// --- Mobile hamburger ---
+const sidebarToggle = document.getElementById('sidebarToggle');
+
+sidebarToggle?.addEventListener('click', () => {
+  if (sidebar.classList.contains('mobile-visible')) {
+    sidebar.classList.remove('mobile-visible');
+    sidebar.classList.add('mobile-hidden');
+  } else {
+    sidebar.classList.add('mobile-visible');
+    sidebar.classList.remove('mobile-hidden');
+  }
+});
+
+// Hide sidebar on outside click (mobile)
+document.addEventListener('click', function(e){
+  if (window.innerWidth < 768) {
+    if (!sidebar.contains(e.target) && !sidebarToggle.contains(e.target)) {
+      sidebar.classList.remove('mobile-visible');
+      sidebar.classList.add('mobile-hidden');
+    }
+  }
+});
+
+// --- Remember last active menu ---
+        const navLinks = document.querySelectorAll('.sidebar .nav-link');
+        const lastActive = localStorage.getItem('lastActiveNav');
+
+        if (lastActive) {
+          navLinks.forEach(link => {
+            link.classList.remove('active');
+            if (link.getAttribute('href') === lastActive) {
+              link.classList.add('active');
+            }
+          });
+        }
+
+        navLinks.forEach(link => {
+          link.addEventListener('click', () => {
+            localStorage.setItem('lastActiveNav', link.getAttribute('href'));
+            navLinks.forEach(l => l.classList.remove('active'));
+            link.classList.add('active');
+          });
+        });
+
+
+
 </script>
+
 </body>
 </html>
