--- a/schooladmin/dashboard.html
+++ b/schooladmin/dashboard.html
@@ -16,17 +16,6 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
   <style>
-
-    @media (max-width: 768px) {
-          .sidebar {
-            display: none !important;
-          }
-
-          .content {
-            margin-left: 0 !important;
-          }
-        }
-
     /* Styles — kept largely from your original with minimal changes */
           body, .sidebar, .content, .card, .table, button, a, p, span, td, th {
         font-family: 'Roboto', sans-serif;
@@ -154,49 +143,23 @@
           tabindex="-1"
           id="mobileSidebar">
 
-        <div class="offcanvas-header border-bottom">
-          <h5 class="offcanvas-title fw-semibold">
-            <i class="bi bi-mortarboard-fill me-2"></i>
-            School Admin
-          </h5>
-
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title">School Admin</h5>
           <button type="button"
                   class="btn-close"
                   data-bs-dismiss="offcanvas"></button>
         </div>
 
-        <div class="offcanvas-body d-flex flex-column p-0">
+        <div class="offcanvas-body p-0">
 
-          <!-- Menu -->
-          <ul class="nav flex-column px-3 pt-3" id="mobileMenu">
-            <li class="nav-item">
-              <a href="dashboard.html" class="nav-link">Dashboard</a>
-            </li>
-
-            <li class="nav-item">
-              <a href="students.html" class="nav-link">Students</a>
-            </li>
-
-            <li class="nav-item">
-              <a href="attendance.html" class="nav-link">Attendance</a>
-            </li>
-
-            <li class="nav-item">
-              <a href="sms.html" class="nav-link">SMS</a>
-            </li>
-
-            <li class="nav-item">
-              <a href="reports.html" class="nav-link">Reports</a>
-            </li>
+          <!-- SAME MENU AS SIDEBAR -->
+          <ul class="nav flex-column px-3">
+            <li class="nav-item"><a href="#" class="nav-link active">Dashboard</a></li>
+            <li class="nav-item"><a href="students.html" class="nav-link">Students</a></li>
+            <li class="nav-item"><a href="attendance.html" class="nav-link">Attendance</a></li>
+            <li class="nav-item"><a href="sms.html" class="nav-link">SMS</a></li>
+            <li class="nav-item"><a href="reports.html" class="nav-link">Reports</a></li>
           </ul>
-
-          <!-- Logout Bottom -->
-          <div class="mt-auto p-3 border-top">
-            <button class="btn btn-danger w-100 logout-btn">
-              <i class="bi bi-box-arrow-right me-2"></i>
-              Logout
-            </button>
-          </div>
 
         </div>
       </div>
