--- a/schooladmin/dashboard.html
+++ b/schooladmin/dashboard.html
@@ -16,6 +16,17 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
   <style>
+
+    @media (max-width: 768px) {
+          .sidebar {
+            display: none !important;
+          }
+
+          .content {
+            margin-left: 0 !important;
+          }
+        }
+
     
     /* Styles — kept largely from your original with minimal changes */
           body, .sidebar, .content, .card, .table, button, a, p, span, td, th {
