--- a/schooladmin/dashboard.html
+++ b/schooladmin/dashboard.html
@@ -615,6 +615,24 @@
   </script>
 
 
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyDPyFdoFh6kpsnJ9IMrGAvs8egNLkjQe-o",
+    authDomain: "my-child-today-f6c24.firebaseapp.com",
+    projectId: "my-child-today-f6c24",
+    storageBucket: "my-child-today-f6c24.firebasestorage.app",
+    messagingSenderId: "84678623630",
+    appId: "1:84678623630:web:1bc4cfc1890b41bbe4e4df",
+    measurementId: "G-VHSY73TL0V"
+  };
 
   
 
