--- a/schooladmin/students.html
+++ b/schooladmin/students.html
@@ -13,6 +13,33 @@
   <!-- Custom Dashboard CSS + Inline Adjustments -->
   <link rel="stylesheet" href="css/dashboard.css">
   <style>
+
+    /* ===== MOBILE HAMBURGER SIDEBAR ===== */
+        @media (max-width: 768px) {
+
+          .sidebar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 240px;
+            transform: translateX(-100%);
+            transition: transform 0.3s ease;
+            z-index: 1050;
+          }
+
+          .sidebar.mobile-visible {
+            transform: translateX(0);
+          }
+
+          .content {
+            margin-left: 0 !important;
+          }
+
+        }
+
+
+
     .stat-card { transition: transform 0.2s; }
     .stat-card:hover { transform: scale(1.03); }
     .stat-icon { font-size: 2rem; color: #198754; }
@@ -256,6 +283,17 @@ Alignment Cleanup
 
     <!-- Main Content -->
     <main class="content flex-grow-1 p-4">
+      <!-- Mobile Top Bar -->
+        <div class="d-md-none d-flex align-items-center mb-3">
+
+          <button id="sidebarToggle" class="btn btn-light border me-2">
+            <i class="bi bi-list fs-4"></i>
+          </button>
+
+          <span class="fw-bold">Students</span>
+
+        </div>
+
 
       <!-- Search Bar -->
       <div class="search-bar mb-4">
@@ -468,5 +506,36 @@ Alignment Cleanup
       }
     });
   </script>
+
+  <script>
+const sidebar = document.querySelector('.sidebar');
+const sidebarToggle = document.getElementById('sidebarToggle');
+
+// Toggle sidebar
+sidebarToggle?.addEventListener('click', () => {
+  sidebar.classList.toggle('mobile-visible');
+});
+
+// Close sidebar when clicking outside
+      document.addEventListener('click', function(e) {
+
+        if (window.innerWidth < 768) {
+
+          if (
+            sidebar &&
+            sidebarToggle &&
+            !sidebar.contains(e.target) &&
+            !sidebarToggle.contains(e.target)
+          ) {
+            sidebar.classList.remove('mobile-visible');
+          }
+
+        }
+
+      });
+      </script>
+
+
+
 </body>
 </html>
