--- a/schooladmin/students.html
+++ b/schooladmin/students.html
@@ -357,18 +357,31 @@ Alignment Cleanup
 
       <!-- Action Buttons -->
       <div class="d-flex flex-wrap justify-content-between align-items-center gap-2 mb-4">
-        <div>
-          <button class="btn btn-success me-2" id="addStudentBtn">
-            <i class="bi bi-plus-circle me-1"></i> Add Student
-          </button>
 
-          <button class="btn btn-primary me-2" id="editSelectedBtn"><i class="bi bi-pencil-square me-1"></i> Edit Selected</button>
-          <button class="btn btn-danger" id="deleteSelectedBtn"><i class="bi bi-trash3 me-1"></i> Delete Selected</button>
-        </div>
-        <div>
-          <button class="btn btn-outline-success" id="importCsvBtn"><i class="bi bi-file-earmark-arrow-up me-1"></i> Import CSV/Excel</button>
-        </div>
-      </div>
+       <!-- Left buttons -->
+            <div class="d-flex flex-wrap gap-2">
+              <button class="btn btn-success" id="addStudentBtn">
+                <i class="bi bi-plus-circle me-1"></i> Add Student
+              </button>
+
+              <button class="btn btn-primary" id="editSelectedBtn">
+                <i class="bi bi-pencil-square me-1"></i> Edit Selected
+              </button>
+
+              <button class="btn btn-danger" id="deleteSelectedBtn">
+                <i class="bi bi-trash3 me-1"></i> Delete Selected
+              </button>
+            </div>
+
+            <!-- Right button -->
+            <div class="d-flex flex-wrap">
+              <button class="btn btn-outline-success" id="importCsvBtn">
+                <i class="bi bi-file-earmark-arrow-up me-1"></i> Import CSV/Excel
+              </button>
+            </div>
+
+          </div>
+
 
       <!-- Students Table -->
       <div class="card shadow-sm p-3">
