--- a/schooladmin/students.html
+++ b/schooladmin/students.html
@@ -14,6 +14,17 @@
   <link rel="stylesheet" href="css/dashboard.css">
   <style>
 
+    @media (max-width: 576px) {
+  #addStudentBtn,
+  #editSelectedBtn,
+  #deleteSelectedBtn,
+  #importCsvBtn {
+    font-size: 10px;
+    padding: 5px 8px;
+  }
+}
+
+
     /* ===== MOBILE WIDTH SAFETY FIX ===== */
         @media (max-width: 768px) {
 
