--- a/schooladmin/students.html
+++ b/schooladmin/students.html
@@ -13,7 +13,6 @@
   <!-- Custom Dashboard CSS + Inline Adjustments -->
   <link rel="stylesheet" href="css/dashboard.css">
   <style>
-    
 
     /* ===== MOBILE WIDTH SAFETY FIX ===== */
         @media (max-width: 768px) {
@@ -334,47 +333,81 @@ Alignment Cleanup
     <!-- Main Content -->
     <main class="content flex-grow-1 p-4">
       <!-- Mobile Top Bar -->
-<div class="d-md-none d-flex align-items-center justify-content-between mb-3">
-  <button id="sidebarToggle" class="btn btn-light border me-2">
-    <i class="bi bi-list fs-4"></i>
-  </button>
-  <span class="fw-bold">Students</span>
-</div>
+        <div class="d-md-none d-flex align-items-center mb-3">
 
-<!-- Section Header -->
-<h5 class="fw-bold mb-3">Student Management</h5>
+          <button id="sidebarToggle" class="btn btn-light border me-2">
+            <i class="bi bi-list fs-4"></i>
+          </button>
 
-<!-- Search Bar + Action Buttons Container -->
-<div class="mb-4 d-flex flex-column flex-md-row justify-content-between gap-3">
+          <span class="fw-bold">Students</span>
 
-  <!-- Left Section: Search Bar -->
-  <div class="flex-grow-1">
-    <div class="input-group w-100">
-      <span class="input-group-text bg-white border-end-0"><i class="bi bi-search text-muted"></i></span>
-      <input type="text" id="searchInput" class="form-control border-start-0" placeholder="Search students...">
-    </div>
+        </div>
+
+
+      <!-- Search Bar -->
+      <div class="search-bar mb-4">
+        <div class="input-group w-100 w-md-50">
+          <span class="input-group-text bg-white border-end-0"><i class="bi bi-search text-muted"></i></span>
+          <input type="text" id="searchInput" class="form-control border-start-0" placeholder="Search students...">
+        </div>
+      </div>
+
+      <!-- Student Management Header -->
+      <h5 class="fw-bold mb-4">Student Management</h5>
+
+      <!-- Action Buttons -->
+      <div class="d-flex flex-wrap justify-content-between align-items-center gap-2 mb-4">
+
+     <!-- Left buttons -->
+            <div class="d-flex flex-wrap gap-2">
+              <button class="btn btn-success" id="addStudentBtn">
+                <i class="bi bi-plus-circle me-1"></i> Add Student
+              </button>
+
+              <button class="btn btn-primary" id="editSelectedBtn">
+                <i class="bi bi-pencil-square me-1"></i> Edit Selected
+              </button>
+
+              <button class="btn btn-danger" id="deleteSelectedBtn">
+                <i class="bi bi-trash3 me-1"></i> Delete Selected
+              </button>
+            </div>
+
+            <!-- Right button -->
+            <div class="d-flex flex-wrap">
+              <button class="btn btn-outline-success" id="importCsvBtn">
+                <i class="bi bi-file-earmark-arrow-up me-1"></i> Import CSV/Excel
+              </button>
+            </div>
+
+          </div>
+
+
+      <!-- Students Table -->
+      <div class="card shadow-sm p-3">
+        <div class="table-responsive">
+          <table class="table table-hover align-middle" id="studentsTable">
+            <thead class="table-light">
+              <tr>
+                <th><input type="checkbox" id="selectAll"></th>
+                <th>Student Name</th>
+                <th>Class</th>
+                <th>Age</th>
+                <th>Gender</th>
+                <th>Reg. No (ID)</th>
+                <th>Email</th>
+                <th>Actions</th>
+              </tr>
+            </thead>
+            <tbody id="studentsTableBody">
+              <!-- Dynamic rows populated by JS -->
+            </tbody>
+          </table>
+        </div>
+      </div>
+
+    </main>
   </div>
-
-  <!-- Right Section: Buttons -->
-  <div class="d-flex flex-wrap gap-2 mt-2 mt-md-0">
-    <button class="btn btn-success" id="addStudentBtn">
-      <i class="bi bi-plus-circle me-1"></i> Add Student
-    </button>
-
-    <button class="btn btn-primary" id="editSelectedBtn">
-      <i class="bi bi-pencil-square me-1"></i> Edit Selected
-    </button>
-
-    <button class="btn btn-danger" id="deleteSelectedBtn">
-      <i class="bi bi-trash3 me-1"></i> Delete Selected
-    </button>
-
-    <button class="btn btn-outline-success" id="importCsvBtn">
-      <i class="bi bi-file-earmark-arrow-up me-1"></i> Import CSV/Excel
-    </button>
-  </div>
-
-</div>
 
   <!-- Floating CTA Add Student Button -->
   <button class="btn btn-success" id="floatingAddBtn" data-bs-toggle="modal" data-bs-target="#addEditModal">
