--- a/schooladmin/students.html
+++ b/schooladmin/students.html
@@ -14,6 +14,30 @@
   <link rel="stylesheet" href="css/dashboard.css">
   <style>
 
+    /* Make sure table and content never overflow mobile screens */
+@media (max-width: 768px) {
+  .content {
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
+  }
+
+  .table-responsive {
+    overflow-x: auto;
+  }
+
+  table {
+    min-width: 600px; /* keeps table readable on small screens */
+  }
+
+  /* Keep table action buttons inline */
+  #studentsTable td:last-child {
+    display: flex;
+    gap: 4px;
+  }
+}
+
+
     /* ===== MOBILE WIDTH SAFETY FIX ===== */
         @media (max-width: 768px) {
 
@@ -333,54 +357,47 @@ Alignment Cleanup
     <!-- Main Content -->
     <main class="content flex-grow-1 p-4">
       <!-- Mobile Top Bar -->
-        <div class="d-md-none d-flex align-items-center mb-3">
+<div class="d-md-none d-flex align-items-center justify-content-between mb-3">
+  <button id="sidebarToggle" class="btn btn-light border me-2">
+    <i class="bi bi-list fs-4"></i>
+  </button>
+  <span class="fw-bold">Students</span>
+</div>
 
-          <button id="sidebarToggle" class="btn btn-light border me-2">
-            <i class="bi bi-list fs-4"></i>
-          </button>
+<!-- Search Bar + Action Buttons Container -->
+<div class="mb-4 d-flex flex-column flex-md-row justify-content-between gap-3">
 
-          <span class="fw-bold">Students</span>
+  <!-- Left Section: Search Bar -->
+  <div class="flex-grow-1">
+    <div class="input-group w-100">
+      <span class="input-group-text bg-white border-end-0"><i class="bi bi-search text-muted"></i></span>
+      <input type="text" id="searchInput" class="form-control border-start-0" placeholder="Search students...">
+    </div>
+  </div>
 
-        </div>
+  <!-- Right Section: Buttons -->
+  <div class="d-flex flex-wrap gap-2 mt-2 mt-md-0">
+    <button class="btn btn-success" id="addStudentBtn">
+      <i class="bi bi-plus-circle me-1"></i> Add Student
+    </button>
 
+    <button class="btn btn-primary" id="editSelectedBtn">
+      <i class="bi bi-pencil-square me-1"></i> Edit Selected
+    </button>
 
-      <!-- Search Bar -->
-      <div class="search-bar mb-4">
-        <div class="input-group w-100 w-md-50">
-          <span class="input-group-text bg-white border-end-0"><i class="bi bi-search text-muted"></i></span>
-          <input type="text" id="searchInput" class="form-control border-start-0" placeholder="Search students...">
-        </div>
-      </div>
+    <button class="btn btn-danger" id="deleteSelectedBtn">
+      <i class="bi bi-trash3 me-1"></i> Delete Selected
+    </button>
 
-      <!-- Student Management Header -->
-      <h5 class="fw-bold mb-4">Student Management</h5>
+    <button class="btn btn-outline-success" id="importCsvBtn">
+      <i class="bi bi-file-earmark-arrow-up me-1"></i> Import CSV/Excel
+    </button>
+  </div>
 
-      <!-- Action Buttons -->
-      <div class="d-flex flex-wrap justify-content-between align-items-center gap-2 mb-4">
+</div>
 
-     <!-- Left buttons -->
-            <div class="d-flex flex-wrap gap-2">
-              <button class="btn btn-success" id="addStudentBtn">
-                <i class="bi bi-plus-circle me-1"></i> Add Student
-              </button>
-
-              <button class="btn btn-primary" id="editSelectedBtn">
-                <i class="bi bi-pencil-square me-1"></i> Edit Selected
-              </button>
-
-              <button class="btn btn-danger" id="deleteSelectedBtn">
-                <i class="bi bi-trash3 me-1"></i> Delete Selected
-              </button>
-            </div>
-
-            <!-- Right button -->
-            <div class="d-flex flex-wrap">
-              <button class="btn btn-outline-success" id="importCsvBtn">
-                <i class="bi bi-file-earmark-arrow-up me-1"></i> Import CSV/Excel
-              </button>
-            </div>
-
-          </div>
+<!-- Section Header -->
+<h5 class="fw-bold mb-3">Student Management</h5>
 
 
       <!-- Students Table -->
