--- a/schooladmin/attendance.html
+++ b/schooladmin/attendance.html
@@ -13,6 +13,44 @@
   <link rel="stylesheet" href="css/dashboard.css">
 
   <style>
+
+    /* MOBILE HAMBURGER SIDEBAR */
+@media (max-width: 768px) {
+
+  .sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 240px;
+    transform: translateX(-100%);
+    transition: transform 0.3s ease;
+    z-index: 1050;
+  }
+
+  .sidebar.mobile-visible {
+    transform: translateX(0);
+  }
+
+  .content {
+    margin-left: 0 !important;
+    width: 100%;
+    overflow-x: hidden;
+  }
+
+  /* Add scroll to content */
+  body {
+    overflow-x: hidden;
+  }
+
+  /* Make search & header full width on mobile */
+  .search-row { max-width: 100%; min-width: auto; }
+  .filters-row { flex-direction: column; align-items: stretch; gap: 0.5rem; }
+}
+
+
+
+
     .content { padding-bottom: 40px; }
     .search-row { max-width: 50%; min-width: 300px; }
     .filters-row .form-select { min-width: 180px; }
