--- a/schooladmin/attendance.html
+++ b/schooladmin/attendance.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <title>Attendance - My Child Today</title>
 
   <!-- Bootstrap CSS -->
@@ -14,11 +14,16 @@
 
   <style>
 
+    .table-responsive {
+  width: 100%;
+}
+
+
     /* ===== MOBILE READABILITY FIX ===== */
 @media (max-width: 768px) {
 
   body {
-    font-size: 14px !important;
+    font-size: 14px;
   }
 
   .content {
