--- a/schooladmin/attendance.html
+++ b/schooladmin/attendance.html
@@ -363,13 +363,15 @@ Alignment Cleanup
 
     <!-- Main content -->
     <main class="content flex-grow-1 p-4">
+
       <!-- Mobile Top Bar (for small screens) -->
-        <div class="d-md-none d-flex align-items-center mb-3">
-          <button id="sidebarToggle" class="btn btn-light border me-2">
+        <div class="d-md-none d-flex align-items-center justify-content-between mb-3">
+          <button id="sidebarToggle" class="btn btn-light border">
             <i class="bi bi-list fs-4"></i>
           </button>
-          <span class="fw-bold">Attendance</span>
+          <span class="fw-bold ms-auto">Attendance</span>
         </div>
+
 
       <!-- Search bar -->
       <div class="mb-2">
