--- a/schooladmin/attendance.html
+++ b/schooladmin/attendance.html
@@ -14,27 +14,6 @@
 
   <style>
 
-    /* Small Sidebar Close Button */
-.sidebar-close-btn {
-  background: rgba(255,255,255,0.15);
-  border: none;
-  width: 28px;
-  height: 28px;
-  border-radius: 6px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  padding: 0;
-}
-
-.sidebar-close-btn i {
-  font-size: 12px;
-}
-
-.sidebar-close-btn:hover {
-  background: rgba(255,255,255,0.25);
-}
 
 
 
@@ -381,9 +360,10 @@ Alignment Cleanup
           </div>
 
           <!-- Mobile Close Button -->
-          <button id="closeSidebarBtn" class="sidebar-close-btn d-md-none">
+          <button id="closeSidebarBtn" class="btn btn-sm btn-light d-md-none p-1">
             <i class="bi bi-x"></i>
           </button>
+
 
 
       <ul class="nav flex-column px-3">
